--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "concurrently": "^7.0.0",
+    "json-server": "^0.17.0",
+    "react-scripts": "5.0.0"
   }
+  
+
+  
 }
+
+
